--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ html{
 }
 
 .background{
-    background: rgba(0, 0, 0, 0.7) url('../background.jpg');
+    background: rgba(0, 0, 0, 0.7) url('../ https://gauravji585.github.io/study.com/background.jpg');
     background-size: cover;
     background-blend-mode: darken;
 }
