--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ html{
 }
 
 .background{
-    background: rgba(0, 0, 0, 0.7) url('../ https://gauravji585.github.io/study.com/background.jpg');
+    background: rgba(0, 0, 0, 0.7) url('../https://github.com/gauravji585/study.com/commit/58950a77b7e150f130848e09ed7640bf2cb89a21');
     background-size: cover;
     background-blend-mode: darken;
 }
